--- a/Setting Up K3S Cluster/README
+++ b/Setting Up K3S Cluster/README
@@ -1,3 +1,45 @@
 # Installing Kubernetes
-https://www.learnlinux.tv/how-to-build-an-awesome-kubernetes-cluster-using-proxmox-virtual-environment/
+ref: https://www.learnlinux.tv/how-to-build-an-awesome-kubernetes-cluster-using-proxmox-virtual-environment/
+# Setting up a static IP
+edit /etc/network/interfaces
+
+# The primary network interface
+```
+iface <interface> inet static
+        address <ip-address>/24
+        gateway <gateway-ip>
+```
+# Disable SWAP
+sudo swapoff -a
+edit the /etc/fstab file and comment out the line that corresponds to swap
+
+# Enable bridging
+
+sudo nano /etc/sysctl.conf
+net.ipv4.ip_forward=1
+
+# Disable ipv6
+nano /etc/sysctl.conf
+```
+net.ipv6.conf.all.disable_ipv6 = 1
+net.ipv6.conf.default.disable_ipv6 = 1
+net.ipv6.conf.lo.disable_ipv6 = 1
+net.ipv6.conf.tun0.disable_ipv6 = 1
+```
+# Install K3S
+```
+curl -sfL https://get.k3s.io | INSTALL_K3S_EXEC="--docker" sh -
+k3s kubectl get node 
+```
+
+# config server internal and external ip for local use
+```
+sudo mkdir -p /etc/rancher/k3s
+sudo nano /etc/rancher/k3s/config.yaml
+```
+node-ip: "server ip"
+node-external-ip: "server ip"
+
+# Use MetalLB for External IP Assignment
+kubectl apply -f https://raw.githubusercontent.com/metallb/metallb/main/config/manifests/metallb-native.yaml
 
